syntax = "proto3";

package ambition;

import "google/api/annotations.proto";

service AmbitionService {
/*
  rpc ReadAction() returns (ActionResponse) {
    option (google.api.http) = {
      get: "/action/{ActionId}"
    };
  }
*/
  rpc ReadActions(ActionsRequest) returns (ActionResponse) {
    option (google.api.http) = {
      get: "/action"
    };
  }

  rpc CreateAction(CreateActionRequest) returns (ActionResponse) {
    option (google.api.http) = {
      post: "/action"
      body: "*"
    };
  }
/*
  rpc ReadOccurrence() returns (OccurrenceResponse) {
    option (google.api.http) = {
      get: "/occurrence/{OccurrenceId}"
    };
  }
*/
  rpc ReadOccurrences(OccurrencesRequest) returns (OccurrenceResponse) {
    option (google.api.http) = {
      get: "/action/{ActionId}"
    };
  }

  rpc CreateOccurrence(CreateOccurrenceRequest) returns (OccurrenceResponse) {
    option (google.api.http) = {
      post: "/action/{ActionId}"
      body: "*"
    };
  }

}

message CreateActionRequest {
  int64 UserId = 1;
  string ActionName = 2;
}

message ActionsRequest {
  int64 UserId = 1;
}

message ActionResponse {
  repeated Action Result = 1;
  string Error = 4;
}

message Action {
  int64 ActionId = 1;
  int64 UserId = 2;
  string ActionName = 3;
}

message CreateOccurrenceRequest {
  int64 ActionId = 1;
  int64 EpocTime = 2;
}

message OccurrencesRequest {
  int64 UserId = 1;
  int64 ActionId = 2;
}

message OccurrenceResponse {
  repeated Occurrence Result = 1;
  string Error = 2;
}

message Occurrence {
  int64 OccurrenceId = 1;
  int64 ActionId = 2;
  int64 EpocTime = 3;
}

